--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "lib/system"]
 	path = lib/system
 	url = https://github.com/thunderbrewhq/system.git
+[submodule "lib/bc"]
+	path = lib/bc
+	url = https://github.com/thunderbrewhq/bc.git
